--- a/index2.html
+++ b/index2.html
@@ -19,5 +19,9 @@
     <div></div>
     <div class="fn-insert-here"></div>
     <div class="fn-insert-here"></div>
+    <script>
+      const newDiv = document.createElement('div')
+      document.body.appendChild(newDiv)
+    </script>
   </body>
 </html>
