--- a/index2.html
+++ b/index2.html
@@ -23,5 +23,12 @@
       const newDiv = document.createElement('div')
       document.body.appendChild(newDiv)
     </script>
+    <script>
+      const div = document.createElement('div')
+      const p = document.createElement('p')
+      p.textContent = 'p'
+      div.appendChild(p)
+      document.body.appendChild(div)
+    </script>
   </body>
 </html>
