--- a/index2.html
+++ b/index2.html
@@ -20,15 +20,56 @@
     <div class="fn-insert-here"></div>
     <div class="fn-insert-here"></div>
     <script>
+      //2.1
       const newDiv = document.createElement('div')
       document.body.appendChild(newDiv)
-    </script>
-    <script>
+      //2.2
       const div = document.createElement('div')
       const p = document.createElement('p')
       p.textContent = 'p'
       div.appendChild(p)
       document.body.appendChild(div)
+      //2.3
+      const div = document.createElement('div')
+      for (let i = 1; i <= 6; i++) {
+        const p = document.createElement('p')
+        p.textContent = `Párrafo ${i}`
+        div.appendChild(p)
+      }
+      document.body.appendChild(div)
+      //2.4
+      const p = document.createElement('p')
+      p.textContent = 'Soy dinámico!'
+      document.body.appendChild(p)
+      //2.5
+      const h2 = document.querySelector('h2.fn-insert-here')
+      h2.textContent = 'Wubba Lubba dub dub'
+      //2.6
+      const apps = ['Facebook', 'Netflix', 'Instagram', 'Snapchat', 'Twitter']
+      const ul = document.createElement('ul')
+      apps.forEach((app) => {
+        const li = document.createElement('li')
+        li.textContent = app
+        ul.appendChild(li)
+      })
+      document.body.appendChild(ul)
+      //2.7
+      const elementsToRemove = document.querySelectorAll('.fn-remove-me')
+      elementsToRemove.forEach((el) => el.remove())
+      //2.8
+      const allDivs = document.querySelectorAll('body > div')
+      const firstDiv = allDivs[0]
+      const secondDiv = allDivs[1]
+      const pBetween = document.createElement('p')
+      pBetween.textContent = 'Voy en medio!'
+      secondDiv.parentNode.insertBefore(pBetween, secondDiv)
+      //2.9
+      const targetDivs = document.querySelectorAll('div.fn-insert-here')
+      targetDivs.forEach((div) => {
+        const p = document.createElement('p')
+        p.textContent = 'Voy dentro!'
+        div.appendChild(p)
+      })
     </script>
   </body>
 </html>
