--- a/index4.html
+++ b/index4.html
@@ -9,5 +9,23 @@
     <input class="click" type="text" />
     <input class="focus" type="text" />
     <input class="value" type="text" />
+    <button id="btnToClick">Click me</button>
+    <script>
+      //1.1
+      const button = document.getElementById('btnToClick')
+      button.addEventListener('click', (event) => {
+        console.log('Evento click:', event)
+      })
+      //1.2
+      const inputFocus = document.querySelector('input.focus')
+      inputFocus.addEventListener('focus', (event) => {
+        console.log('Valor del input en focus:', event.target.value)
+      })
+      //1.3
+      const inputValue = document.querySelector('input.value')
+      inputValue.addEventListener('input', (event) => {
+        console.log('Valor actual del input:', event.target.value)
+      })
+    </script>
   </body>
 </html>
