--- a/index2.html
+++ b/index2.html
@@ -24,11 +24,11 @@
       const newDiv = document.createElement('div')
       document.body.appendChild(newDiv)
       //2.2
-      const div = document.createElement('div')
-      const p = document.createElement('p')
-      p.textContent = 'p'
-      div.appendChild(p)
-      document.body.appendChild(div)
+      const div2 = document.createElement('div')
+      const p2 = document.createElement('p')
+      p2.textContent = 'p'
+      div2.appendChild(p2)
+      document.body.appendChild(div2)
       //2.3
       const div = document.createElement('div')
       for (let i = 1; i <= 6; i++) {
