--- a/index4.html
+++ b/index4.html
@@ -26,6 +26,21 @@
       inputValue.addEventListener('input', (event) => {
         console.log('Valor actual del input:', event.target.value)
       })
+
+      const albums = [
+        'De Mysteriis Dom Sathanas',
+        'Reign of Blood',
+        'Ride the Lightning',
+        'Painkiller',
+        'Iron Fist'
+      ]
+      const ul = document.createElement('ul')
+      albums.forEach((album) => {
+        const li = document.createElement('li')
+        li.textContent = album
+        ul.appendChild(li)
+      })
+      document.body.appendChild(ul)
     </script>
   </body>
 </html>
